--- a/resources/data_quality_job.job.yml
+++ b/resources/data_quality_job.job.yml
@@ -2,6 +2,10 @@ resources:
   jobs:
     data_quality_framework_Job_run_01:
       name: data_quality_framework_Job_run_01
+      schedule:
+        quartz_cron_expression: 47 5 0 * * ?   # TIME = 00:05AM Trigger Scheduled
+        timezone_id: Asia/Calcutta
+        pause_status: UNPAUSED
       tasks:
         - task_key: dq_job
           notebook_task:
@@ -12,7 +16,7 @@ resources:
               tables: enrollment,pharmacy_claim
               Input_file_location_pk: pk_file_volume/pk_files.txt
             source: WORKSPACE
-#          depends_on: [sample]     
+#          depends_on: [sample]   
       queue:
         enabled: true
       performance_target: PERFORMANCE_OPTIMIZED
